# openscad-lists

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: json-generate.yml
data/: gallery.yaml  news.yaml
scripts/: gallery.py  news.py
